# irsl_instance_segmentation

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
docker/: Dockerfile  build.sh  run_bash.sh  run_docker.sh  run_ram_grounding_sam.sh
irsl_instance_segmentation/: inference_detectron2.py  ram_grounding_sam.py
launch/: maskrcnn.docker.launch  ram_grounding_sam.launch  run.launch
nodes/: maskrcnn_node.py  ram_grounding_sam_node.py
rest_server/: README.md  app.py  client_test.py
sample/: sample.py
